force-app/main/default/objects/Destination__c/Destination__c.object-meta.xml
<CustomObject>
    <label>宛先①</label>
    <nameField>
        <label>宛先①</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>