force-app/main/default/objects/Destination__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>事故</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>NK</relationshipName>
    <type>Lookup</type>
</CustomField>