force-app/main/default/objects/Destination__c/fields/longText__c.field-meta.xml
<CustomField>
    <fullName>longText__c</fullName>
    <label>本文</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>