force-app/main/default/objects/Destination__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>本文（テキスト２５５）</label>
    <type>TextArea</type>
</CustomField>